<resources>
    <string name="app_name">SDB Viewer</string>
    <string name="app_name_with_version">SDB Viewer %1$s</string>
    <string name="title_song_detail">Song Detail</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_import_settings">Import Settings</string>
    <string name="settings_imported">Settings imported.</string>

    <string name="acra_title">Oops!</string>
    <string name="acra_text">Sorry, SDB Viewer just crashed. This should not happen. Please send an error report to the developer so the problem can be fixed!\n\nAll data contained in the report will be kept strictly confidential and only used to identify the problem.\n</string>
    <string name="acra_comment_prompt">You can add a comment here, e.g. to describe which action produced the error:</string>

    <string name="pref_header_general">General</string>
    <string name="pref_header_display">Display</string>

    <string name="pref_songs_url">pref_songs_url</string>
    <string name="pref_songs_url_default">https://codeberg.org/mathisdt/sdbviewer/raw/branch/master/songs.xml</string>
    <string name="pref_songs_url_desc">Songs web address</string>

    <string name="pref_songs_reload_interval">pref_songs_reload_interval</string>
    <string name="pref_songs_reload_interval_desc">Refresh interval (hours)</string>

    <string name="pref_show_translation">pref_show_translation</string>
    <string name="pref_show_translation_desc">Show translation (if present)</string>

    <string name="pref_show_chords">pref_show_chords</string>
    <string name="pref_show_chords_desc">Show chords (if present)</string>
    <string name="about">About</string>
    <string name="aboutText">The Song Database (SDB) is a program for desktop PCs and notebooks to show lyrics on a digital projector for worship in a congregation. It is available for free for all major platforms, see https://zephyrsoft.org/sdb for more information.
        \n\n<b>This app can display the data produced and managed by Song Database if the file is accessible via a URL (web address).</b> This app cannot be used for anything else, so if you don\'t use Song Database, this probably isn\'t for you!
        \n\nIf you don\'t want to upload the file containing the songs every time you modify it in SDB, you could set up a synchronisation solution like Nextcloud (see https://nextcloud.com for more information) and use the "share link" functionality - the resulting link has to be used in this app.
        \n\nSDB Viewer asks for the INTERNET permission - without it, the app can\'t download the file containing the song data. If a crash occurs, the app will offer to send a crash report to the developer to help fix the problem. If you agree it will send the error message and some metadata. Any data sent this way will be handled confidentially and only used to fix the problem.
        \n\n<b>This is an open source project</b>, so if there is anything you don\'t like, you are very welcome to contact me or even write some code yourself and contribute it. Please don\'t try to communicate with me via reviews, that doesn\'t work in both directions. Just write me an email, and I\'ll see what I can do - web site and email address as stated below.
        \n\nhttps://zephyrsoft.org/sdbviewer
        \n\nandroid@zephyrsoft.org\n
    </string>
    <string name="versionDescription">Version:</string>
    <string name="search">Search</string>
    <string name="menu_import_settings">Import settings from QR code</string>
    <string name="camera_explanation">Please allow this app to access the camera in order to scan the QR code.</string>
    <string name="camera_rejected">You rejected the camera permission, so the QR code cannot be scanned.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="scroll_play">Play</string>
    <string name="scroll_pause">Pause</string>
    <string name="scroll_stop">Stop</string>
    <string name="scroll_faster">Faster</string>
    <string name="scroll_slower">Slower</string>
</resources>
